# RheaFramework

./: CMakeLists.txt  GlobalState.hpp  Utils.cpp  Utils.hpp  VulkanApp.cpp  VulkanApp.hpp  main.cpp
Engine/Render/: Render.cpp  Render.hpp
Engine/State/: State.hpp
Engine/Utils/: CrossplatformVk.hpp  Definitions.hpp
Engine/Utils/Vulkan/: QueueFamilyUtils.cpp  QueueFamilyUtils.hpp  SwapChainSupportUtils.cpp  SwapChainSupportUtils.hpp
Engine/VulkanInitUtils/: VulkanInits.hpp
Engine/VulkanInitUtils/Instance/: VulkanInitInstance.cpp  VulkanInitInstance.hpp
Engine/VulkanInitUtils/PhysicalDevice/: VulkanInitPhysicalDevice.cpp  VulkanInitPhysicalDevice.hpp
Engine/VulkanInitUtils/Surface/: VulkanInitSurface.cpp  VulkanInitSurface.hpp
Engine/VulkanInitUtils/Window/: WindowInit.cpp  WindowInit.hpp
Resources/Shaders/: compile.sh
Resources/Shaders/Compiled/: frag.spv  vert.spv
Resources/Shaders/Source/: shader.frag  shader.vert
glm/: glm.hpp
